terraform/terraform-dynamodb-state-locking/security-group.tf
resource "aws_security_group" "web-sg" {
  name        = "webserver-sg"
  description = "Allow inbound traffic and outbound traffic"

  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    protocol  = "tcp"
    from_port = 80
    to_port   = 80
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "web-instance-sg"
  }
}
